Updated about page and welcome page

--- a/index.html
+++ b/index.html
@@ -583,8 +583,8 @@
 
 
 
-<p>Feel free to check the <a href="/posts">posts</a> to see some of the theme features. There are some <a href="/tags/extra">extra posts</a> available.</p>
-<p>You can also pick a different color by using the colored square in the footer.</p>
+<p>Hello and welcome to my blog! I will be <a href="/posts">posting</a> some of the various writeups of challenges I do as well as deep dives into topics I like. Feel free to <a href="/contact">reach out</a> and let me know what you think!</p>
+<p>Don&rsquo;t like the color themes? Go ahead and try out a different variation down below! Thanks to <a href="https://gitlab.com/rmaguiar/hugo-theme-color-your-world">Raphael Aguiar</a> for the theme.</p>
 
 
       </article>
