Update About Page

--- a/about/index.html
+++ b/about/index.html
@@ -598,7 +598,7 @@
     max-width: 70%;
 	}
 </style>
-<p>Hello! I&rsquo;m Somerset, a Computer Systems Engineering major at Arizona State University with a concentration in Cybersecurity. I am still getting my bearings in the field but I&rsquo;m starting to take a liking to pentesting and more red team aspects. As a result, I&rsquo;ve gotten an internship position with <a href="https://navisec.io/">NaviSec</a> with whom I&rsquo;ve been learning about professional pentesting and vulnerability assessments. My mentor at NaviSec (<a href="https://twitter.com/pry0cc">@pry0cc</a>) has been encouraging me to practice and learn by doing retired <a href="https://www.hackthebox.eu/">Hack the Box</a> machines which recently has been my main focus.</p>
+<p>Hello! I&rsquo;m Somerset, a Computer Systems Engineering major at Arizona State University with a concentration in Cybersecurity. I am still getting my bearings in the field but I&rsquo;m starting to take a liking to pentesting and more red team aspects. I learned a lot from my time at NaviSec <a href="https://navisec.io/">NaviSec</a> as an intern where I learned about professional pentesting and vulnerability assessments. My mentor at NaviSec (<a href="https://twitter.com/pry0cc">@pry0cc</a>) encouraged me to learn by doing retired <a href="https://www.hackthebox.eu/">Hack the Box</a> machines which recently has been my main focus.</p>
 <p>In my free time I enjoy movies, especially anything mystery thriller related (as you may have figured out with my name). I also leave the house occasionally to go hiking in the beautiful Phoenix area.</p>
 <p>
 
